[package]
name = "api-cf-verification"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
api-helper.workspace = true
async-trait = "0.1"
bytes = "1.0.1"
chirp-client.workspace = true
tivet-operation.workspace = true
chrono = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
lazy_static = "1.4"
prost = "0.10"
tivet-cache.workspace = true
tivet-cf-verification-server.workspace = true
tivet-claims.workspace = true
tivet-health-checks.workspace = true
tivet-pools.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "ansi",
] }
url = "2.2.2"
uuid = { version = "1", features = ["v4"] }

cf-custom-hostname-get.workspace = true
tivet-config.workspace = true
tivet-env.workspace = true

[dev-dependencies]
tivet-cf-verification.workspace = true
tivet-connection.workspace = true

faker-game.workspace = true
