[package]
name = "api-monolith-public"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
api-helper.workspace = true
async-trait = "0.1"
chirp-client.workspace = true
http = "0.2"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tivet-operation.workspace = true
tokio = { version = "1.40" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "ansi",
] }
url = "2.2.2"

api-actor.workspace = true
api-auth.workspace = true
api-cf-verification.workspace = true
api-cloud.workspace = true
api-games.workspace = true
api-group.workspace = true
api-identity.workspace = true
api-job.workspace = true
api-matchmaker.workspace = true
api-portal.workspace = true
api-status.workspace = true
tivet-config.workspace = true
tivet-env.workspace = true
api-ui.workspace = true
