[package]
name = "api-status"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
api-helper.workspace = true
async_once = "0.2"
async-trait = "0.1"
chirp-client.workspace = true
tivet-operation.workspace = true
chrono = "0.4"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["server", "http1", "stream", "tcp"] }
lazy_static = "1.4"
prost = "0.10"
regex = "1.5"
reqwest = { version = "0.11", features = ["stream"] }
cluster.workspace = true
tivet-api.workspace = true
tivet-cache.workspace = true
tivet-claims.workspace = true
tivet-health-checks.workspace = true
tivet-matchmaker.workspace = true
tivet-pools.workspace = true
tivet-status-server.workspace = true
s3-util.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40" }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "ansi"] }
url = "2.2.2"
uuid = { version = "1", features = ["v4"] }
game-resolve-name-id.workspace = true
game-namespace-resolve-name-id.workspace = true

token-create.workspace = true
trust-dns-resolver = "0.23.2"
tivet-config.workspace = true
tivet-env.workspace = true

[dev-dependencies]
tivet-connection.workspace = true
tivet-status.workspace = true
urlencoding = "2.1.0"
uuid = { version = "1", features = ["v4"] }
faker-region.workspace = true
