[package]
name = "api-traefik-provider"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tivet-convert.workspace = true
api-helper.workspace = true
async_once = "0.2"
async-trait = "0.1"
chirp-client.workspace = true
tivet-operation.workspace = true
chrono = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["server", "http1", "stream", "tcp"] }
lazy_static = "1.4"
prost = "0.10"
tivet-cache.workspace = true
tivet-claims.workspace = true
tivet-health-checks.workspace = true
tivet-pools.workspace = true
s3-util.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "ansi",
] }
url = "2.2.2"
util-cdn.workspace = true
util-job.workspace = true
uuid = { version = "1", features = ["v4"] }

cluster.workspace = true
ds.workspace = true
tivet-config.workspace = true
tivet-env.workspace = true

[dependencies.sqlx]
workspace = true
features = ["json"]


[dev-dependencies]
tivet-connection.workspace = true
tivet-route.workspace = true
base64 = "0.13"
reqwest = "0.11"

cdn-namespace-auth-user-update.workspace = true
cdn-namespace-domain-create.workspace = true
faker-cdn-site.workspace = true
faker-game.workspace = true
faker-game-namespace.workspace = true
faker-game-version.workspace = true
faker-job-run.workspace = true
faker-region.workspace = true
game-get.workspace = true
