[package]
name = "tivet-service-manager"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.89"
global-error.workspace = true
tokio = { version = "1.40", features = ["full", "tracing"] }
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-pools.workspace = true
tracing = "0.1.40"
include_dir = "0.7.4"
tivet-config.workspace = true
tokio-cron-scheduler = "0.13.0"
chrono = "0.4.38"

