[package]
name = "tivet-schema-generator"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
anyhow = "1.0"
pegboard-config = { path = "../client/config" }
tivet-config.workspace = true
tivet-toolchain.workspace = true
schemars = "0.8.21"
serde_json = "1.0"