[package]
name = "chirp-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-perf.workspace = true
chirp-types.workspace = true
chrono = "0.4"
futures-util = "0.3"
global-error = { workspace = true, features = ["chirp"] }
lazy_static = "1.4"
prost = "0.10"
rand = "0.8"
tivet-metrics.workspace = true
tivet-pools.workspace = true
tivet-util.workspace = true
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
types-proto.workspace = true
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
] }

testcontainers = "0.12"
tivet-test-images.workspace = true
