[package]
name = "cf-custom-hostname-worker"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-client.workspace = true
chirp-worker.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-runtime.workspace = true
serde = { version = "1.0", features = ["derive"] }

cf-custom-hostname-list-for-namespace-id.workspace = true
cf-custom-hostname-resolve-hostname.workspace = true
game-get.workspace = true
game-namespace-list.workspace = true
game-resolve-namespace-id.workspace = true
game-list-for-team.workspace = true
tivet-config.workspace = true

[dev-dependencies]
chirp-worker.workspace = true

faker-game.workspace = true
cf-custom-hostname-get.workspace = true
