[package]
name = "cloud-worker"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-worker.workspace = true
chirp-client.workspace = true
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-runtime.workspace = true

cloud-game-token-create.workspace = true
chrono = "0.4.31"
tivet-config.workspace = true
[dev-dependencies]
chirp-worker.workspace = true
