[package]
name = "team-invite-worker"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-worker.workspace = true
chirp-client.workspace = true
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-runtime.workspace = true
chrono = "0.4"

team-member-list.workspace = true
team-user-ban-get.workspace = true
tivet-config.workspace = true

[dependencies.sqlx]
workspace = true

[dev-dependencies]
chirp-worker.workspace = true
