[package]
name = "upload-worker"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-worker.workspace = true
chirp-client.workspace = true
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-runtime.workspace = true
s3-util.workspace = true
tivet-config.workspace = true

[dependencies.sqlx]
workspace = true

[dev-dependencies]
chirp-worker.workspace = true

upload-get.workspace = true
upload-prepare.workspace = true
