[package]
name = "cluster-datacenter-tls-renew"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-client.workspace = true
chirp-workflow.workspace = true
tivet-connection.workspace = true
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-runtime.workspace = true
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "ansi"] }
tracing-logfmt = "0.3"

cluster.workspace = true
tivet-config.workspace = true

[dependencies.sqlx]
workspace = true

[dev-dependencies]
