[package]
name = "faker-job-run"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tivet-operation.workspace = true
chirp-client.workspace = true
prost = "0.10"

faker-job-template.workspace = true
faker-region.workspace = true
job-run.workspace = true
tivet-test.workspace = true

[dev-dependencies]
chirp-worker.workspace = true
tivet-test.workspace = true
