[package]
name = "game-namespace-validate"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tivet-operation.workspace = true
chirp-client.workspace = true
prost = "0.10"

game-namespace-resolve-name-id.workspace = true

[dev-dependencies]
chirp-worker.workspace = true

faker-game.workspace = true
