[package]
name = "job-gc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chirp-client.workspace = true
chrono = "0.4"
futures-util = "0.3"
indoc = "1.0"
lazy_static = "1.4"
nomad-client = "0.0.9"
nomad-util.workspace = true
prost = "0.10"
tivet-connection.workspace = true
tivet-health-checks.workspace = true
tivet-metrics.workspace = true
tivet-operation.workspace = true
tivet-pools.workspace = true
tivet-runtime.workspace = true
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "ansi",
] }
tracing-logfmt = "0.3"
uuid = { version = "1", features = ["serde"] }

mm-lobby-for-run-id.workspace = true
mm-lobby-get.workspace = true
tivet-config.workspace = true

[dependencies.sqlx]
workspace = true

[dev-dependencies]
chirp-worker.workspace = true

faker-job-run.workspace = true
job-run.workspace = true
